include_directories(
	${WAYLAND_SERVER_INCLUDE_DIRS}
	${XKBCOMMON_INCLUDE_DIRS}
	${PIXMAN_INCLUDE_DIRS}
	${WLROOTS_INCLUDE_DIRS}
	${XDG_SHELL_PROTOCOL_INCLUDE_DIR}
	${WLR_LAYER_SHELL_PROTOCOL_INCLUDE_DIR}
	"."
)
set_source_files_properties(
	${XDG_SHELL_PROTOCOL_HEADER}
	${XDG_SHELL_PROTOCOL_SOURCE}
	${WLR_LAYER_SHELL_PROTOCOL_HEADER}
	${WLR_LAYER_SHELL_PROTOCOL_SOURCE}
	PROPERTIES GENERATED 1
)
aux_source_directory("." WAKANA_SOURCES)
add_executable(
	"wakana"
	${WAKANA_SOURCES}
	${XDG_SHELL_PROTOCOL_HEADER}
	${XDG_SHELL_PROTOCOL_SOURCE}
	${WLR_LAYER_SHELL_PROTOCOL_HEADER}
	${WLR_LAYER_SHELL_PROTOCOL_SOURCE}
)
add_dependencies("wakana" "xdg-shell-protocol" "wlr-layer-shell-protocol")
target_compile_definitions(
	"wakana"
	PUBLIC
	${WAYLAND_SERVER_DEFINITIONS}
	${XKBCOMMON_DEFINITIONS}
	${PIXMAN_DEFINITIONS}
	${WLROOTS_DEFINITIONS}
)
target_link_libraries(
	"wakana"
	${WAYLAND_SERVER_LIBRARIES}
	${XKBCOMMON_LIBRARIES}
	${PIXMAN_LIBRARIES}
	${WLROOTS_LIBRARIES}
)
